# deep-learning

./: Boston.ipynb  README.md  chapter3.py  driver.py  pyproject.toml
deep_learning/: __init__.py  layer.py  layers.py  loss.py  neural_network.py  operation.py  operations.py  optimizer.py  param_operation.py  trainer.py
deep_learning/operations/: __init__.py  operation.py  param_operation.py
