[tool.poetry]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["Rodrigo Stevaux <rodrigo.stevaux@loft.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
sklearn = "^0.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
